# rp2350-riscv-blinky

./: .gitignore  CMakeLists.txt  README.md  blink.S  link.ld
cmake/: riscv32-unknown-elf-toolchain.cmake
